Bug fix attempt for overflow on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -242,6 +242,7 @@ html {
 
 /* *===== HEADER =====* */
 .header {
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
