--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 .header__logo img {
   width: 3.5em;
